# cpp-voxel-engine

./: .clang-format  .gitignore  CMakeLists.txt  Camera.cpp  Camera.hpp  Chunk.cpp  Chunk.hpp  ChunkMesh.cpp  ChunkMesh.hpp  Constants.hpp  Engine.cpp  Engine.hpp  Enums.hpp  MeshBuilder.cpp  MeshBuilder.hpp  Ray.hpp  Voxel.cpp  Voxel.hpp  main.c  main.cpp
Rendering/: ChunkMesh.cpp  ChunkMesh.hpp  Mesh.hpp
Shaders/: vertex.glsl
Utils/: IndexBuffer.cpp  IndexBuffer.hpp  Input.cpp  Input.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Vao.cpp  Vao.hpp  Vbo.cpp  Vbo.hpp  Vertex.hpp
World/: Chunk.cpp  Chunk.hpp
